--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "nodemailer": "^6.9.7",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "tmp": "^0.2.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
